log
Wed 03 May 2023 03:25:07 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
9616161
Thu 04 May 2023 01:13:01 AM UTC: 
 sudoku.c | 77 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 76 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:108:8: error: implicit declaration of function ‘has_valid_rows’ [-Werror=implicit-function-declaration]
  108 |     if(has_valid_rows(n->sudo, i) == 0) return 0;
      |        ^~~~~~~~~~~~~~
sudoku.c:111:10: error: implicit declaration of function ‘has_valid_columns’; did you mean ‘has_unique_columns’? [-Werror=implicit-function-declaration]
  111 |       if(has_valid_columns(n->sudo, j) == 0) return 0;
      |          ^~~~~~~~~~~~~~~~~
      |          has_unique_columns
cc1: all warnings being treated as errors
Compilation failed
d9a9046
Thu 04 May 2023 01:13:43 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d96f7d7
Thu 04 May 2023 01:17:22 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
ee501d5
Fri 05 May 2023 03:06:40 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
10907bd
Fri 05 May 2023 03:07:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d09bd6a
Fri 05 May 2023 03:07:20 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
21412e8
Fri 05 May 2023 03:07:51 AM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|3
total_score: 35/70
8c4fd49
Fri 05 May 2023 03:08:50 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
7db8417
Fri 05 May 2023 03:14:34 AM UTC: 
 sudoku.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
1939c79
Fri 05 May 2023 03:18:22 AM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
3a90d28
Fri 05 May 2023 03:18:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7d11a0f
Fri 05 May 2023 03:20:22 AM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_final’:
sudoku.c:169:19: error: expected ‘,’ or ‘;’ before ‘j’
  169 |     for(int j = 0 j < 9 ; j++)
      |                   ^
sudoku.c:169:30: error: expected ‘;’ before ‘)’ token
  169 |     for(int j = 0 j < 9 ; j++)
      |                              ^
      |                              ;
Compilation failed
0fe17d2
Fri 05 May 2023 03:20:34 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
acd4521
Fri 05 May 2023 03:24:53 AM UTC: 
 sudoku.c | 30 ++++++++++++++++++++++--------
 1 file changed, 22 insertions(+), 8 deletions(-)
 tests:  6|2
total_score: 45/70
fc58ded
Fri 05 May 2023 03:25:27 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
7d71679
Fri 05 May 2023 02:55:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
7b4d763
Fri 05 May 2023 02:59:12 PM UTC: 
 sudoku.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 55/70
ffca257
Fri 05 May 2023 03:03:49 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:147:7: error: variable ‘valido’ set but not used [-Werror=unused-but-set-variable]
  147 |   int valido=0;
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
43e6acd
Fri 05 May 2023 03:04:54 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:170:13: error: implicit declaration of function ‘printf_node’; did you mean ‘print_node’? [-Werror=implicit-function-declaration]
  170 |             printf_node(newNode);
      |             ^~~~~~~~~~~
      |             print_node
cc1: all warnings being treated as errors
Compilation failed
0ba7085
Fri 05 May 2023 03:05:03 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
8558be1
Fri 05 May 2023 03:06:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
769a0c1
Fri 05 May 2023 03:07:18 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
00b0468
Fri 05 May 2023 03:07:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
f232aaf
Fri 05 May 2023 03:08:35 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
063fcc7
